[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://microgames/Colecao1/micro_1/player.gd" type="Script" id=2]
[ext_resource path="res://microgames/Colecao1/micro_1/car.gd" type="Script" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.8185, 31.4423 )

[sub_resource type="Animation" id=3]
resource_name = "pulo"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 122.202, 492.776 ), Vector2( 122.202, 100 ), Vector2( 122.202, 492.776 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64.9309, 27.3328 )

[sub_resource type="Animation" id=4]
resource_name = "drive"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1321.45, 436.208 ), Vector2( -262.464, 436.208 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "taco"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("player:global_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 122.202, 492.776 ), Vector2( -1532.88, -285.464 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="jump fdp" type="Node2D"]

[node name="ground" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 530.084, 607.411 )
scale = Vector2( 19.7024, 1.37565 )
texture = ExtResource( 1 )

[node name="player" type="Area2D" parent="."]
position = Vector2( 122.202, 492.776 )
scale = Vector2( 2.25953, 2.25953 )
script = ExtResource( 2 )

[node name="protag" type="Sprite" parent="player"]
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
anims/pulo = SubResource( 3 )

[node name="car" type="Area2D" parent="."]
position = Vector2( 1321.45, 436.208 )
scale = Vector2( 2.03536, 2.88833 )
script = ExtResource( 3 )

[node name="protag" type="Sprite" parent="car"]
scale = Vector2( 2.16527, 1.01187 )
texture = ExtResource( 1 )

[node name="protag2" type="Sprite" parent="car"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -44.7509, 31.5259 )
scale = Vector2( 0.492973, 0.493555 )
texture = ExtResource( 1 )

[node name="protag3" type="Sprite" parent="car"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 46.6286, 29.6483 )
scale = Vector2( 0.492973, 0.493555 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="car"]
position = Vector2( 1.04321, -1.37895 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="car"]
autostart = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="car"]
anims/drive = SubResource( 4 )

[node name="TACADO" type="AnimationPlayer" parent="."]
anims/taco = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="area_entered" from="player" to="player" method="_on_player_area_entered"]
[connection signal="area_entered" from="car" to="car" method="_on_car_area_entered"]
[connection signal="timeout" from="car/Timer" to="car" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="car/AnimationPlayer2" to="car" method="_on_AnimationPlayer2_animation_finished"]
[connection signal="animation_finished" from="TACADO" to="player" method="_on_TACADO_animation_finished"]
[connection signal="timeout" from="Timer" to="player" method="_on_Timer_timeout"]
